// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`should render correctly when creating and showing step 0 1`] = `
<React.Fragment>
  <Image
    entityType="event"
    showCarousel={false}
  />
  <EntityHeading>
    New Event
  </EntityHeading>
  <EntityDetailsContainer
    type="default"
  >
    <StepCollection
      currentPage={0}
      onStepClick={[Function]}
      steps={
        Array [
          Object {
            "formName": "EditEventBasics",
            "page": 0,
            "title": "Basics",
          },
          Object {
            "formName": "EditEventTags",
            "page": 1,
            "title": "Tags",
          },
          Object {
            "formName": "EditEventTimes",
            "page": 2,
            "title": "Times",
          },
          Object {
            "formName": "EditEventTalents",
            "page": 3,
            "title": "Talent",
          },
          Object {
            "formName": "EditEventImages",
            "page": 4,
            "title": "Images",
          },
        ]
      }
    />
    <Divider
      type="basic"
    />
    <Connect(ReduxForm)
      initialValues={
        Object {
          "name": "Initial Values",
        }
      }
      isEdit={false}
      onCancel={[Function]}
      onSubmit={[Function]}
    />
  </EntityDetailsContainer>
</React.Fragment>
`;

exports[`should render correctly when creating and showing step 1 1`] = `
<React.Fragment>
  <Image
    entityType="event"
    showCarousel={false}
  />
  <EntityHeading>
    New Event
  </EntityHeading>
  <EntityDetailsContainer
    type="default"
  >
    <StepCollection
      currentPage={1}
      onStepClick={[Function]}
      steps={
        Array [
          Object {
            "formName": "EditEventBasics",
            "page": 0,
            "title": "Basics",
          },
          Object {
            "formName": "EditEventTags",
            "page": 1,
            "title": "Tags",
          },
          Object {
            "formName": "EditEventTimes",
            "page": 2,
            "title": "Times",
          },
          Object {
            "formName": "EditEventTalents",
            "page": 3,
            "title": "Talent",
          },
          Object {
            "formName": "EditEventImages",
            "page": 4,
            "title": "Images",
          },
        ]
      }
    />
    <Divider
      type="basic"
    />
    <Connect(ReduxForm)
      initialValues={
        Object {
          "name": "Initial Values",
        }
      }
      isEdit={false}
      onCancel={[Function]}
      onPreviousPage={[Function]}
      onSubmit={[Function]}
    />
  </EntityDetailsContainer>
</React.Fragment>
`;

exports[`should render correctly when creating and showing step 2 1`] = `
<React.Fragment>
  <Image
    entityType="event"
    showCarousel={false}
  />
  <EntityHeading>
    New Event
  </EntityHeading>
  <EntityDetailsContainer
    type="default"
  >
    <StepCollection
      currentPage={2}
      onStepClick={[Function]}
      steps={
        Array [
          Object {
            "formName": "EditEventBasics",
            "page": 0,
            "title": "Basics",
          },
          Object {
            "formName": "EditEventTags",
            "page": 1,
            "title": "Tags",
          },
          Object {
            "formName": "EditEventTimes",
            "page": 2,
            "title": "Times",
          },
          Object {
            "formName": "EditEventTalents",
            "page": 3,
            "title": "Talent",
          },
          Object {
            "formName": "EditEventImages",
            "page": 4,
            "title": "Images",
          },
        ]
      }
    />
    <Divider
      type="basic"
    />
    <Connect(ReduxForm)
      initialValues={
        Object {
          "name": "Initial Values",
        }
      }
      isEdit={false}
      onCancel={[Function]}
      onPreviousPage={[Function]}
      onSubmit={[Function]}
    />
  </EntityDetailsContainer>
</React.Fragment>
`;

exports[`should render correctly when creating and showing step 3 1`] = `
<React.Fragment>
  <Image
    entityType="event"
    showCarousel={false}
  />
  <EntityHeading>
    New Event
  </EntityHeading>
  <EntityDetailsContainer
    type="default"
  >
    <StepCollection
      currentPage={3}
      onStepClick={[Function]}
      steps={
        Array [
          Object {
            "formName": "EditEventBasics",
            "page": 0,
            "title": "Basics",
          },
          Object {
            "formName": "EditEventTags",
            "page": 1,
            "title": "Tags",
          },
          Object {
            "formName": "EditEventTimes",
            "page": 2,
            "title": "Times",
          },
          Object {
            "formName": "EditEventTalents",
            "page": 3,
            "title": "Talent",
          },
          Object {
            "formName": "EditEventImages",
            "page": 4,
            "title": "Images",
          },
        ]
      }
    />
    <Divider
      type="basic"
    />
    <Connect(withState(ReduxForm))
      initialValues={
        Object {
          "name": "Initial Values",
        }
      }
      isEdit={false}
      onCancel={[Function]}
      onPreviousPage={[Function]}
      onSubmit={[Function]}
    />
  </EntityDetailsContainer>
</React.Fragment>
`;

exports[`should render correctly when creating and showing step 4 1`] = `
<React.Fragment>
  <Image
    entityType="event"
    showCarousel={false}
  />
  <EntityHeading>
    New Event
  </EntityHeading>
  <EntityDetailsContainer
    type="default"
  >
    <StepCollection
      currentPage={4}
      onStepClick={[Function]}
      steps={
        Array [
          Object {
            "formName": "EditEventBasics",
            "page": 0,
            "title": "Basics",
          },
          Object {
            "formName": "EditEventTags",
            "page": 1,
            "title": "Tags",
          },
          Object {
            "formName": "EditEventTimes",
            "page": 2,
            "title": "Times",
          },
          Object {
            "formName": "EditEventTalents",
            "page": 3,
            "title": "Talent",
          },
          Object {
            "formName": "EditEventImages",
            "page": 4,
            "title": "Images",
          },
        ]
      }
    />
    <Divider
      type="basic"
    />
    <Connect(ReduxForm)
      initialValues={
        Object {
          "name": "Initial Values",
        }
      }
      isEdit={false}
      onCancel={[Function]}
      onPreviousPage={[Function]}
      onSubmit={[Function]}
    />
  </EntityDetailsContainer>
</React.Fragment>
`;

exports[`should render correctly when updating and showing step 0 1`] = `
<React.Fragment>
  <Image
    entityType="event"
    showCarousel={false}
  />
  <EntityHeading>
    New Event
  </EntityHeading>
  <EntityDetailsContainer
    type="default"
  >
    <StepCollection
      currentPage={0}
      onStepClick={[Function]}
      steps={
        Array [
          Object {
            "formName": "EditEventBasics",
            "page": 0,
            "title": "Basics",
          },
          Object {
            "formName": "EditEventTags",
            "page": 1,
            "title": "Tags",
          },
          Object {
            "formName": "EditEventTimes",
            "page": 2,
            "title": "Times",
          },
          Object {
            "formName": "EditEventTalents",
            "page": 3,
            "title": "Talent",
          },
          Object {
            "formName": "EditEventImages",
            "page": 4,
            "title": "Images",
          },
        ]
      }
    />
    <Divider
      type="basic"
    />
    <Connect(ReduxForm)
      initialValues={
        Object {
          "name": "Initial Values",
        }
      }
      isEdit={true}
      onCancel={[Function]}
      onSubmit={[Function]}
    />
  </EntityDetailsContainer>
</React.Fragment>
`;
